--- a/styles/wikiStyles.scss
+++ b/styles/wikiStyles.scss
@@ -1,11 +1,22 @@
 .wiki-body {
+  * {
+    color: rgb(209, 213, 219);
+  }
+
   a {
-    color: #53bff9;
+    color: var(--custom-primary);
+
+    &:visited {
+      color: var(--custom-secondary);
+    }
   }
 
   h1,
   h2,
-  h3 {
+  h3,
+  h4,
+  h5,
+  h6 {
     color: white;
   }
 
@@ -29,100 +40,88 @@
     margin-bottom: 0.45rem;
   }
 
-  section {
-    padding: 1rem 0;
-    margin: 1rem;
-
-    &:not(:last-of-type) {
-      border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    }
-  }
-
   img {
     border-radius: 4px;
   }
 
-  p {
-    margin-bottom: 0.8rem;
-  }
-
-  table {
+  table,
+  .infobox {
     background-color: #444444;
     border-radius: 4px;
+    border-collapse: collapse;
+    box-shadow: var(--custom-box-shadow);
+    border: none;
 
     th,
     td {
       padding: 0.75rem;
+      border: 1px solid #22222250;
+    }
+
+    table {
+      box-shadow: none;
     }
   }
 
   figure {
-    display: table;
-    text-align: center;
-    clear: right;
-    float: right;
-    margin: 1rem;
-
-    &.mw-halign-left {
-      clear: left;
-      float: left;
-    }
+    background-color: unset;
+    box-shadow: var(--custom-box-shadow);
+    border-radius: 4px;
 
     figcaption {
-      display: table-caption;
-      caption-side: bottom;
+      text-align: center !important;
     }
   }
 
-  .infobox {
-    float: right;
-    clear: right;
-    margin: 0 0 1rem 1rem;
-  }
+  // .infobox {
+  //   float: right;
+  //   clear: right;
+  //   margin: 0 0 1rem 1rem;
+  // }
 
   .hatnote,
   figcaption {
     font-size: 0.75rem;
   }
 
-  .gallery {
-    text-align: center;
-    overflow-x: hidden;
+  // .gallery {
+  //   text-align: center;
+  //   overflow-x: hidden;
 
-    .gallerybox {
-      display: inline-grid;
-      text-overflow: ellipsis;
-      margin: 0.5rem;
+  //   .gallerybox {
+  //     display: inline-grid;
+  //     text-overflow: ellipsis;
+  //     margin: 0.5rem;
 
-      .gallerytext {
-        display: inline;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
-    }
-  }
+  //     .gallerytext {
+  //       display: inline;
+  //       white-space: nowrap;
+  //       text-overflow: ellipsis;
+  //       overflow: hidden;
+  //     }
+  //   }
+  // }
 
-  .thumbinner,
-  .multiimageinner {
-    width: unset !important;
-    max-width: unset !important;
-  }
+  // .thumbinner,
+  // .multiimageinner {
+  //   width: unset !important;
+  //   max-width: unset !important;
+  // }
 
-  .thumb.tmulti .trow {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin: 1rem;
-  }
+  // .thumb.tmulti .trow {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   gap: 1rem;
+  //   margin: 1rem;
+  // }
 
-  .tright {
-    float: right;
-    clear: right;
-  }
+  // .tright {
+  //   float: right;
+  //   clear: right;
+  // }
 
-  .tleft {
-    float: left;
-    clear: left;
-  }
+  // .tleft {
+  //   float: left;
+  //   clear: left;
+  // }
 }
