fix: button tooltip area

--- a/components/Button.module.scss
+++ b/components/Button.module.scss
@@ -1,10 +1,12 @@
 .button {
     .tooltip {
+        display: none;
         filter: opacity(0);
     }
 
     &:hover {
         .tooltip {
+            display: unset;
             filter: opacity(1);
         }
     }
